--- a/PVB Stage Applicatie/Views/Shared/_Menu.cshtml
+++ b/PVB Stage Applicatie/Views/Shared/_Menu.cshtml
@@ -25,7 +25,7 @@
                    new { LinkText="Inloggen", ActionName="Index",ControllerName="Login",Roles= "Anonymous"}
                 };
 } 
-<ul id="menuItems">
+<ul class="nav navbar-nav">
     @if (HttpContext.Current.User.Identity.IsAuthenticated)
     {
         PVB_Stage_Applicatie.Models.RolVerdeler rv = new PVB_Stage_Applicatie.Models.RolVerdeler();
@@ -39,7 +39,7 @@
         foreach (var link in links)
         {
             @:
-            <li class="menuItem"> @Html.ActionLink(link.LinkText, link.ActionName, link.ControllerName, null, new { @class = "menuknop"})</li>
+            <li> @Html.ActionLink(link.LinkText, link.ActionName, link.ControllerName, null, new { @class = "menuknop"})</li>
         }
         
     }
