--- a/PVB Stage Applicatie/Views/Bedrijf/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Index.cshtml
@@ -9,91 +9,94 @@
 @if (User.IsInRole("Beheerder"))
 {
     @section zijMenu{
-            <li>@Html.ActionLink("Nieuw bedrijf", "Create")</li>
-            <li>@Html.ActionLink("Bulk invoer", "BulkInvoerBedrijf")</li>
+        <li>@Html.ActionLink("Nieuw bedrijf", "Create")</li>
+        <li>@Html.ActionLink("Bulk invoer", "BulkInvoerBedrijf")</li>
     }
 }
 
-<table>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Naam)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Actief)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NonActiefReden)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.KvKNummer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Plaats)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Straatnaam)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Huisnummer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Toevoeging)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Postcode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Telefoonnummer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th></th>
-    </tr>
 
-    @foreach (var item in Model)
-    {
+<div class="col-md-6">
+    <table class="table table-striped">
         <tr>
-            <td>
-                @Html.ActionLink("" + item.Naam, "Details", new { id = item.BedrijfID })
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Actief)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NonActiefReden)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.KvKNummer)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Plaats)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Straatnaam)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Huisnummer)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Toevoeging)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Postcode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Telefoonnummer)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-            @if (User.IsInRole("Beheerder"))
-            {
-                @Html.ActionLink("Edit", "Edit", new { id = item.BedrijfID })
-            }
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.Naam)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Actief)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NonActiefReden)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.KvKNummer)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Plaats)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Straatnaam)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Huisnummer)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Toevoeging)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Postcode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Telefoonnummer)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th></th>
         </tr>
-    }
-</table>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.ActionLink("" + item.Naam, "Details", new { id = item.BedrijfID })
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Actief)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NonActiefReden)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.KvKNummer)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Plaats)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Straatnaam)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Huisnummer)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Toevoeging)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Postcode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Telefoonnummer)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @if (User.IsInRole("Beheerder"))
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = item.BedrijfID }, new { @class = "btn btn-xs btn-info" })
+                    }
+                </td>
+            </tr>
+        }
+    </table>
+</div>
