--- a/PVB Stage Applicatie/Views/Shared/_Layout.cshtml
+++ b/PVB Stage Applicatie/Views/Shared/_Layout.cshtml
@@ -6,11 +6,14 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/base/css")
+    <link href="/Content/themes/datepicker/css/datepicker.css" rel="stylesheet">
 
 
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
+    <script src="/Scripts/bootstrap.min.js"></script>
+    <script src="/Content/themes/datepicker/js/bootstrap-datepicker.js"></script>
 </head>
 <body>
 
