--- a/PVB Stage Applicatie/Content/Site.css
+++ b/PVB Stage Applicatie/Content/Site.css
@@ -151,3 +151,11 @@ a.menuknop{
 .active > .glyphicon-arrow-left{
 cursor: pointer !important; 
 }
+
+.panel-body{
+    padding:0!important;
+}
+
+.col-md-6{
+    padding:0!important;
+}
