--- a/PVB Stage Applicatie/Views/Bedrijf/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Index.cshtml
@@ -4,7 +4,6 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 
 @if (User.IsInRole("Beheerder"))
 {
@@ -14,89 +13,96 @@
     }
 }
 
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3>Bedrijven</h3>
+    </div>
+    <div class="panel-body">
 
-<div class="col-md-6">
-    <table class="table table-striped">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Naam)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Actief)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NonActiefReden)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.KvKNummer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Plaats)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Straatnaam)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Huisnummer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Toevoeging)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Postcode)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Telefoonnummer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th></th>
-        </tr>
+        <div class="col-md-6">
+            <table class="table table-striped">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Naam)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Actief)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NonActiefReden)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.KvKNummer)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Plaats)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Straatnaam)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Huisnummer)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Toevoeging)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Postcode)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Telefoonnummer)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th></th>
+                </tr>
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.ActionLink("" + item.Naam, "Details", new { id = item.BedrijfID })
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Actief)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NonActiefReden)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.KvKNummer)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Plaats)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Straatnaam)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Huisnummer)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Toevoeging)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Postcode)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Telefoonnummer)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @if (User.IsInRole("Beheerder"))
-                    {
-                        @Html.ActionLink("Edit", "Edit", new { id = item.BedrijfID }, new { @class = "btn btn-xs btn-info" })
-                    }
-                </td>
-            </tr>
-        }
-    </table>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.ActionLink("" + item.Naam, "Details", new { id = item.BedrijfID })
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Actief)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NonActiefReden)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.KvKNummer)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Plaats)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Straatnaam)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Huisnummer)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Toevoeging)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Postcode)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Telefoonnummer)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Email)
+                        </td>
+                        <td>
+                            @if (User.IsInRole("Beheerder"))
+                            {
+                                @Html.ActionLink("Edit", "Edit", new { id = item.BedrijfID }, new { @class = "btn btn-xs btn-info" })
+                            }
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
+    </div>
 </div>
