Formulieren op model post gezet met invoer check.

--- a/PVB Stage Applicatie/Views/Formulier/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Formulier/Index.cshtml
@@ -16,7 +16,7 @@
    (IEnumerable<SelectListItem>)ViewBag.DropDownList, "Selecteer een student")
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Select" />
         </p>
     }
 }
