--- a/PVB Stage Applicatie/Views/Formulier/StudentIndex.cshtml
+++ b/PVB Stage Applicatie/Views/Formulier/StudentIndex.cshtml
@@ -10,16 +10,16 @@
 
 <h2>Index</h2>
 @section zijMenu{
-        @if (User.IsInRole("Docent"))
+    @if (User.IsInRole("Docent"))
+    {
+        if (!beeindigd)
         {
-            if (!beeindigd)
-            {
-                <li>@Html.ActionLink("Beoordeling invullen", "CreateFormulier", "Beoordeling", new { id = Model.StageID}, null)</li>
-                <li>@Html.ActionLink("Gespreksformulier invullen", "CreateGespreksFormulier", "GespreksFormulier", new { id = Model.StageID }, null)</li>
-                <li>@Html.ActionLink("Eindbeoordeling invullen", "CreateEindbeoordeling", "Beoordeling", new { id = Model.StageID }, null)</li>
-                <li>@Html.ActionLink("Tussentijdse beëindiging invullen", "CreateBeeindeging", "TussentijdseBeeindiging", new { id = Model.StageID }, null)</li>
-            }
+            <li>@Html.ActionLink("Beoordeling invullen", "CreateFormulier", "Beoordeling", new { id = Model.StageID}, null)</li>
+            <li>@Html.ActionLink("Gespreksformulier invullen", "CreateGespreksFormulier", "GespreksFormulier", new { id = Model.StageID }, null)</li>
+            <li>@Html.ActionLink("Eindbeoordeling invullen", "CreateEindbeoordeling", "Beoordeling", new { id = Model.StageID }, null)</li>
+            <li>@Html.ActionLink("Tussentijdse beëindiging invullen", "CreateBeeindeging", "TussentijdseBeeindiging", new { id = Model.StageID }, null)</li>
         }
+    }
 }
 
 <h2>Beoordeling</h2>
@@ -29,7 +29,7 @@
             Datum
         </th>
         <th>
-            Beoordeling
+            Type
         </th>
         <th></th>
     </tr>
@@ -40,7 +40,7 @@
             @Html.DisplayFor(modelItem => item.Datum)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Beoordeling1)
+            @Html.DisplayFor(modelItem => item.EindBeoordeling)
         </td>
         <td>
             @Html.ActionLink("Details", "Details", "Beoordeling", new { id = item.BeoordelingID }, null)
@@ -67,7 +67,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Einddatum)
+                @Html.DisplayFor(modelItem => item.Einddatum, "{0:dd/MM/yyyy}")
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Leerweg)
@@ -97,7 +97,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Datum)
+                @Html.DisplayFor(modelItem => item.Datum, "{0:dd/MM/yyyy}")
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ContactType)
@@ -105,7 +105,7 @@
             <td>
                 @if (!beeindigd)
                 {
-                    @Html.ActionLink("Edit", "Edit", "GespreksFormulier", new { id = item.GespreksformulierID }, null);<nay>|</nay>
+                    @Html.ActionLink("Edit", "Edit", "GespreksFormulier", new { id = item.GespreksformulierID }, null);<nay> |</nay>
                 }
                 
                 @Html.ActionLink("Details", "Details", "GespreksFormulier", new { id = item.GespreksformulierID }, null)
